--- a/index.html
+++ b/index.html
@@ -8,29 +8,15 @@
 </head>
 <body>
 <div class="search">
-    <input id="input" type="text" placeholder="Search">
-    <i class="fas fa-search" id="searchbtn"></i>
+    <input id="searchInput" type="text" placeholder="Search">
+    <i class="fas fa-search" id="searchBotton"></i>
 </div>
 
 <div id="map"></div>
 
-<script>
-    var map;
-
-    function initMap() {
-        let armenia = {
-            lat:  40.177200,
-            lng:  44.503490
-        };
-        map = new google.maps.Map(document.getElementById('map'), {
-            center: armenia,
-            zoom: 8.5,
-            // mapTypeId: 'roadmap',
-        });
-        infoWindow = new google.maps.InfoWindow();
-    }
-</script>
-<!--<script src="script.js"></script>-->
+<script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+<script src="script.js"></script>
+<script src="https://maps.googleapis.com/maps/api/place/findplacefromtext/json?input=Museum%20of%20Contemporary%20Art%20Australia&inputtype=textquery&fields=photos,formatted_address,name,rating,opening_hours,geometry&key=AIzaSyCcwazb-T7zvceyA4VLWVB-eXvwj-XEUIA"></script>
 <script  async defer
          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcwazb-T7zvceyA4VLWVB-eXvwj-XEUIA&callback=initMap">
 </script>
